# django-notable-women

./: .gitignore  README.md  pyproject.toml
core/core/: settings.py  urls.py
core/women/: urls.py  views.py
