[tool.poetry]
name = "django-notable-women"
version = "0.1.0"
description = ""
authors = ["Соколов Ярослав <yari.sokolov.2004@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
